<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.AdminDetailDialogFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultLayoutMargin"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageButton
                        android:id="@+id/ibPhotoAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ibHeight"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_launcher" />

                    <EditText
                        android:id="@+id/etNameAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/defaultLayoutMargin"
                        android:gravity="center_horizontal"
                        android:hint="@string/hintName"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/etAddressAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/defaultLayoutMargin"
                        android:gravity="center_horizontal"
                        android:hint="@string/hintAddress"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/etPhoneAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/defaultLayoutMargin"
                        android:gravity="center_horizontal"
                        android:hint="@string/hintPhone"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp" />

                    <EditText
                        android:id="@+id/etEmailAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/defaultLayoutMargin"
                        android:gravity="center_horizontal"
                        android:hint="@string/hintEmail"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>