<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultLayoutMargin"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_product_data"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/heightImageProduct"
                        android:layout_margin="@dimen/defaultLayoutMargin"
                        android:contentDescription="TODO"
                        android:src="@drawable/product_example_image" />

                    <TextView
                        android:id="@+id/tv_product_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/sizeNameProduct"
                        android:textStyle="bold"
                        tools:text="@string/tv_product_title" />

                    <TextView
                        android:id="@+id/tv_product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/sizePriceProduct"
                        tools:text="@string/tv_product_price" />

                    <TextView
                        android:id="@+id/tv_description_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/tv_description_title"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/sizeNameProduct"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_product_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/sizeDescriptionProduct"
                        tools:text="@string/textDescriptionProduct" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:text="Teléfono de contacto"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/sizeNameProduct"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/sizePriceProduct" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Correo electrónico"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/sizeNameProduct"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/sizePriceProduct" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Ubicación"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/sizeNameProduct"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                    <fragment
                        android:id="@+id/fragment_map_detail"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:name="com.google.android.gms.maps.SupportMapFragment"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Comentarios"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/sizeNameProduct"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_item_comments"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_comments" />

                    <Button
                        android:id="@+id/btn_add_comments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/addComments"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>